--- a/source/static/root.css
+++ b/source/static/root.css
@@ -18,6 +18,9 @@
         color: black;
 
         font-size: 1.2vw;
+        
+        width: 5vw;
+        overflow-x: scroll;
     }
 
     & img 
