--- a/source/static/view.css
+++ b/source/static/view.css
@@ -23,6 +23,9 @@
         color: black;
                 
         font-size: 1.2vw;
+
+        width: 5vw;
+        overflow-x: scroll;
     }
             
     & img 
